--- a/about-us.html
+++ b/about-us.html
@@ -250,7 +250,7 @@
                 <h1 class="display-2">SECTOR SPECIALIZATION </h1>
             </div>
 
-            <div class="col-1-2">
+            <div class="col-1-2 mob-full pull-right">
                 <ul class="disc">
                     <li><h4>Entertainment</h4></li>
                     <li><h4>Health and wellness</h4></li>
@@ -260,7 +260,7 @@
                 </ul>
             </div>
 
-            <div class="col-1-2">
+            <div class="col-1-2 mob-full">
                 <div class="card-container">
                     
                     <div class="card" style="--image: url('https://i.ibb.co/wh64f8J/beautyindustry.jpg'); --angle: -5deg; --x: 5%; --y: 15%; --caption: 'Beauty industry'"></div>      
