--- a/about-us.html
+++ b/about-us.html
@@ -250,7 +250,7 @@
                 <h1 class="display-2">SECTOR SPECIALIZATION </h1>
             </div>
 
-            <div class="col-1-2 mob-full pull-right">
+            <div class="col-1-2 mob-full pull-right" id="sector">
                 <ul class="disc">
                     <li><h4>Entertainment</h4></li>
                     <li><h4>Health and wellness</h4></li>
