--- a/about-us.html
+++ b/about-us.html
@@ -29,6 +29,9 @@
         .display-2 {
             font-size: 4em;
         }
+        #about-margin{
+            margin-top: 19rem;
+        }
         @media only screen and (max-width: 1200px) {
             .display-2 {
                 font-size: 4.6rem;
@@ -44,6 +47,9 @@
         @media only screen and (max-width: 600px) {
             .display-2 {
                 font-size: 3.8rem;
+            }
+            #about-margin{
+                margin-top: 3rem;
             }
         }
 
@@ -188,7 +194,7 @@
             <div class="col-block">
                 <h1 class="display-2" sty>THIS IS <br> WHAT WE DO</h1>
             </div>
-            <div class="col-block" style="margin-top: 20rem;">
+            <div class="col-block" id="about-margin">
                 <h1 class="display-2">AND WE LOVE TO TAKE IT TO THE NEXT LEVEL</h1>
             </div>
         </div>
@@ -250,7 +256,7 @@
                 <h1 class="display-2">SECTOR SPECIALIZATION </h1>
             </div>
 
-            <div class="col-1-2 mob-full pull-right" id="sector">
+            <div class="col-1-2 mob-full" id="sector">
                 <ul class="disc">
                     <li><h4>Entertainment</h4></li>
                     <li><h4>Health and wellness</h4></li>
