--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <ul class="header-nav__list">
                     <li class="current"><a href="index.html" title="home">Home</a></li>
                     <li><a href="about-us.html" >About us</a></li>
-                    <li><a class="smoothscroll"  href="#" >Start a project</a></li>
+                    <li><a href="project.html" >Start a project</a></li>
                 </ul>
     
                 <p>Perspiciatis hic praesentium nesciunt. Et neque a dolorum <a href='#0'>voluptatem</a> porro iusto sequi veritatis libero enim. Iusto id suscipit veritatis neque reprehenderit.</p>
@@ -93,7 +93,7 @@
                     <a href="about-us.html" class="btn btn--stroke">
                         About Us
                     </a>
-                    <a href="#contact" class="btn btn--stroke">
+                    <a href="project.html" class="btn btn--stroke">
                         Start a Project
                     </a>
                 </div>
