--- a/project.html
+++ b/project.html
@@ -90,7 +90,7 @@
                 <ul class="header-nav__list">
                     <li class="current"><a href="index.html" title="home">Home</a></li>
                     <li><a class="smoothscroll"  href="about-us.html" >About us</a></li>
-                    <li><a class="smoothscroll"  href="#" >Start a project</a></li>
+                    <li><a class="smoothscroll"  href="project.html" >Start a project</a></li>
                 </ul>
     
                 <p>Perspiciatis hic praesentium nesciunt. Et neque a dolorum <a href='#0'>voluptatem</a> porro iusto sequi veritatis libero enim. Iusto id suscipit veritatis neque reprehenderit.</p>
