--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
                 <ul class="header-nav__social">
                     <li>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/Head-Start-Media-110823897367788"><i class="fa fa-facebook"></i></a>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-instagram"></i></a>
@@ -113,7 +113,7 @@
 
         <ul class="home-social">
             <li>
-                <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+                <a href="https://www.facebook.com/Head-Start-Media-110823897367788"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
             <li>
                 <a href="#0"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
