--- a/about-us.html
+++ b/about-us.html
@@ -87,14 +87,14 @@
                 <ul class="header-nav__list">
                     <li class="current"><a href="index.html" title="home">Home</a></li>
                     <li><a class="smoothscroll"  href="about-us.html" >About us</a></li>
-                    <li><a class="smoothscroll"  href="#" >Start a project</a></li>
+                    <li><a class="smoothscroll"  href="project.html" >Start a project</a></li>
                 </ul>
     
                 <p>Perspiciatis hic praesentium nesciunt. Et neque a dolorum <a href='#0'>voluptatem</a> porro iusto sequi veritatis libero enim. Iusto id suscipit veritatis neque reprehenderit.</p>
     
                 <ul class="header-nav__social">
                     <li>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/Head-Start-Media-110823897367788"><i class="fa fa-facebook"></i></a>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-instagram"></i></a>
@@ -152,7 +152,7 @@
 
         <ul class="about-us-social">
             <li>
-                <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+                <a href="https://www.facebook.com/Head-Start-Media-110823897367788"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
             <li>
                 <a href="#0"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
@@ -302,7 +302,7 @@
                 <div class="footer-logo"></div>
                 Proin eget tortor risus. Mauris blandit aliquet elit. Praesent sapien massa.
                 <ul class="social-icons">
-                    <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a class="facebook" href="https://www.facebook.com/Head-Start-Media-110823897367788"><i class="fa fa-facebook"></i></a></li>
                     <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
                   </ul>
 
