--- a/about-us.html
+++ b/about-us.html
@@ -23,6 +23,7 @@
         .header-menu-icon {
             background-color: black;
         }
+        
         .header-menu-toggle:hover, .header-menu-toggle:focus {
             color: #ff8000;
         }
@@ -53,6 +54,9 @@
             }
             #about-margin{
                 margin-top: 3rem;
+            }
+            #agency{
+                font-size: 1.5rem;
             }
         }
 
@@ -130,7 +134,7 @@
 
                 <div class="col-block" >
                     <h3>Head Start Media is... </h3>
-                    <p>
+                    <p id="agency">
                         A creative agency based in Melbourne, Australia. <br>
                         We use high-end design, technology, creativity, and custom made strategies to grow your online presence by creating unique digital experiences to your audience
                     </p>
@@ -266,6 +270,7 @@
                     <li><h4>Beauty industry</h4></li>
                     <li><h4>Real State</h4></li>
                     <li><h4>Retail</h4></li>
+                    <li><h1 style="margin-top: 3.9rem;">And more</h1></li>
                 </ul>
             </div>
 
