--- a/project.html
+++ b/project.html
@@ -128,7 +128,7 @@
                 <div class="col-full">
                     <h1>
                         Together lets take your <br>
-                         business to another level... <br>
+                         business to another level<br>
                          Contact us!
                     </h1>
                 </div>
@@ -167,7 +167,6 @@
     <section id="contact" class="s-contact">
 
         <div class="overlay"></div>
-        <div class="contact__line"></div>
 
         <div class="row section-header">
             <div class="col-full">
