--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- HEADER -->
 
     <!-- HOME -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/home-bg-1.png" data-natural-width=3000 data-natural-height=1800 data-position-y=center>
+    <section id="home-bg" class="s-home target-section" >
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
