--- a/about-us.html
+++ b/about-us.html
@@ -28,7 +28,7 @@
             color: #ff8000;
         }
         .display-2 {
-            font-size: 5em;
+            font-size: 4.5em;
         }
         .display-2#love {
             font-size: 3em;
@@ -50,6 +50,9 @@
 
         @media only screen and (max-width: 600px) {
             .display-2 {
+                font-size: 3.8rem;
+            }
+            .display-2#love {
                 font-size: 3.8rem;
             }
             #about-margin{
