--- a/about-us.html
+++ b/about-us.html
@@ -97,8 +97,6 @@
                     <li><a href="project.html" >Start a project</a></li>
                 </ul>
     
-                <p>Perspiciatis hic praesentium nesciunt. Et neque a dolorum <a href='#0'>voluptatem</a> porro iusto sequi veritatis libero enim. Iusto id suscipit veritatis neque reprehenderit.</p>
-    
                 <ul class="header-nav__social">
                     <li>
                         <a href="https://www.facebook.com/Head-Start-Media-110823897367788"><i class="fa fa-facebook"></i></a>
@@ -308,7 +306,10 @@
             <div class="col-full tab-full left footer-desc">
 
                 <div class="footer-logo"></div>
-                Proin eget tortor risus. Mauris blandit aliquet elit. Praesent sapien massa.
+                <a href="ricardo@headstartmedia.com.au">ricardo@headstartmedia.com.au</a> <br>
+                (+61) 450 050 189 <br>
+                Anderson St Brisbane,<br>
+                Queensland, Australia
                 <ul class="social-icons">
                     <li><a class="facebook" href="https://www.facebook.com/Head-Start-Media-110823897367788"><i class="fa fa-facebook"></i></a></li>
                     <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
